[package]
name = "quic-server"
version = "0.1.0"
authors = ["Tomislav Tomašić <tomislav.tomasichr@gmail.hr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.28"
futures = "0.3.5"
structopt = "0.3.14"
tracing = "0.1.13"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.5"
common = { path = "../common", version = "0.1.0"}
tokio = { version = "0.2.20", features = [ "full" ]}
quinn = "0.6.1"
directories = "2.0.2"
rcgen = "0.8.1"
broker-proto = { path = "../broker-proto", version = "0.1.0"}